--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,8 @@ year: '2017'
 start: 2017-10-15
 end: 2017-10-17
 url: http://proceedings.mlr.press
+author:
+  name: PMLR
 conference_number: '28'
 published: 2017-10-11
 layout: proceedings
