--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ author:
 conference_number: '28'
 published: 2017-10-11
 layout: proceedings
+publisher: PMLR
 series: Proceedings of Machine Learning Research
 issn: 2640-3498
 id: ALT-2017
