--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 ---
 booktitle: Proceedings of the 28th International Conference on Algorithmic Learning
   Theory
+orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 shortname: ALT
 volume: 76
 year: '2017'
@@ -42,6 +43,10 @@ baseurl: "/v76"
 twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
+exclude:
+- README.md
+- Gemfile
+- ".gitignore"
 style: pmlr
 plugins:
 - jekyll-feed
@@ -70,6 +75,5 @@ conference:
 analytics:
   google:
     tracking_id: UA-92432422-1
-orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 # Site settings
 # Original source:  /Users/neil/mlresearch/bibtex.bib
