Update URL in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ volume: 76
 year: '2017'
 start: 2017-10-15
 end: 2017-10-17
-url: http://proceedings.mlr.press
+url: https://proceedings.mlr.press
 author:
   name: PMLR
 conference_number: '28'
